--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.17.0",
     "@clerk/nextjs": "^6.5.0",
+    "@clerk/shared": "^2.17.0",
     "@prisma/client": "^5.22.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-toastify": "^10.0.6"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-toastify": "^10.0.6",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
